# ai-news-feed

./: .gitignore  DESIGN.md  README.md  SPEC.md  genai-digest-prompt.md  pyproject.toml
.github/workflows/: ci.yml
config/: roster.yaml  sources.yaml
digest/: __init__.py  dedupe.py  fetch.py  models.py  render.py  run.py  score.py
docs/: digest.md  feed.xml  index.html
ops/: com.redwan.genai-digest.plist
scripts/: install_launchd.sh  run_daily.sh
state/: ledger.jsonl
tests/: test_dedupe.py  test_fetch.py  test_models.py  test_render.py  test_run.py  test_score.py
tests/fixtures/: sample_arxiv.atom  sample_bluesky.json  sample_gnews.xml  sample_hn.json  sample_rss.xml  sample_youtube.xml
