[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digest"
version = "0.1.0"
description = "GenAI Daily Digest"
requires-python = ">=3.11"
dependencies = [
    "feedparser",
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["digest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
